// 05/27/2024
- Fixed objects in Queue won't spawn after it's finished
=============
- Added Main Menu
- Added a separate object array for particles
	+ Particles will be now under the objects
- Created Entities
	+ TrailParticle
	+ MovingTrailParticle

// 05/26/2024
- Added SpawnBox
=============
- Added Game States
	+ MainMenu
	+ Play
	+ GameOver
- Changed the level
- Somehow reinitializing the Game class makes it faster and HurtBoxes won't spawn
=============
- Added a "Wall-Bound" variation of the HurtBox
=============
- Added (Spawn) Queue

// 05/25/2024
- Changed the Player's properties
	+ Size to 25x25
- Added properties to Player
	+ Added dashMax
- Added Trail effect to Player (When dashing)
=============
- Added Settings to Game
	+ Controls

// 05/24/2024
- Created files
	+ Created index.html
	+ Created source/Main.js
	+ Created source/Game.js
	+ Created source/Entity.js
	+ Created source/Entities/Player.js
	+ Created source/Util.js
- Added Settings to Game
	+ BackgroundColor
- Added Entities
	+ Player
	+ HurtBox
	+ Particle
- Added abilities for the Player
	+ Movement
	+ Dash
- Added elements
	+ Collision system for Entities